kustomize-guestbook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: registry-vpc.cn-shanghai.aliyuncs.com/dktplatform-third-party/stefanprodan_podinfo:3.1.0
        name: guestbook-ui
        ports:
        - containerPort: 9898
