kustomize-guestbook/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: registry-vpc.cn-shanghai.aliyuncs.com/dktplatform-third-party/gcr.io_heptio-images_ks-guestbook-demo:0.1
        name: guestbook-ui
        ports:
        - containerPort: 80
